--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.11.0",
+    "framer-motion": "^12.23.12",
     "lucide-react": "^0.344.0",
     "pdf-parse": "^1.1.1",
     "react": "^18.3.1",
